itis3135/styles/default.css
html {
    box-sizing: border-box;
}

body {
    background-color: cornflowerblue;
    text-align: center;
    color: midnightblue;
    font-family: sans-serif, arial;
}

a {
    color: cyan;
    text-decoration: none;
}

a:hover {
    color: cornflowerblue;
    background-color: cyan;
}

.tests:hover {
    background-color: unset;
    color: unset;
}

figure > img {
    width: 50%;
}

figcaption {
    font-style: italic;
}

.paragraph {
    margin-left: 10%;
    margin-right: 10%;
    text-align: left;
}

/* For tables.html */
#table-draft  ul {
    display: inline-block;
    margin: 0;
    text-align: left;
}

#table-wrap {
    background-color: lavender;
    max-width: 40rem;
    margin: 1.4rem auto;
    border: 2px solid midnightblue;
}

#table-wrap h3 {
    background-color: midnightblue;
    color: lavender;
}

#table-wrap h3:first-of-type {
    margin-top: 0;
}

#table-wrap table {
    border-collapse: collapse;
    border: 0;
    width: 100%;
    position: relative;   
}

#table-wrap thead > tr {
    background-color: steelblue;
    color: lavender;
}

.odd {
    background-color: lightsteelblue;
}

/* For form.html */

#forms {
    text-align: left;
    background-color: lightsteelblue;
    margin: 1em auto;
    max-width: 500px;
    width: 60vw;
    min-width: 300px;
}

#forms h3 {
    border-bottom: 4px solid cornflowerblue;
}

#forms label {
    display: block;
    margin: 0.5rem 0;
}

input {
    width: 100%;
    margin: 10px 0 0 0;
}

.inline {
    width: unset;
    vertical-align: middle;
    margin: 0 0.5em 0 0;
}

#forms fieldset {
    border: none;
}

p:last-of-type {
    margin-bottom: 0;
}

#splitter {
    margin-top: 1em;
}
fieldset:last-of-type {
    margin: 0 auto;
    text-align: center;
}

/* For website_evaluations.html*/
hr {
    width: 80%;
    height: 1px;
    background-color: steelblue;
    border-color: steelblue;
}

